styled header and nav bar

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
         <meta charset="utf-8" />
         <title>My Journal</title>
         <link href="images/favicon.ico" rel="icon" />
+        <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <header>
             <h1>My Journal</h1>
             <nav>
-                <ul>
-                    <li><a href="#today-entry">Today's Entry</a></li>
-                    <li><a href="#yesterday-entry">Yesterday's Entry</a></li>
-                    <li><a href="#day-before-entry">Day Before Yesterday's Entry</a></li>
+                <ul id="nav-bar">
+                    <li class="nav-item"><a href="#today-entry">Today's Entry</a></li>
+                    <li class="nav-item"><a href="#yesterday-entry">Yesterday's Entry</a></li>
+                    <li class="nav-item"><a href="#day-before-entry">Day Before Yesterday's Entry</a></li>
                 </ul>
             </nav>
             <hr />
